Changes with Apache 1.3a2

  *) child_main avoids an uneeded call to select() when there is only one
     listening socket.  [Dean Gaudet]

  *) In the event that the server is starved for idle servers it will
     spawn 1, then 2, then 4, ..., then 32 servers each second,
     doubling each second.  It'll also give a warning in the errorlog
     since the most common reason for this is a poor StartServers
     setting.  The define MAX_SPAWN_RATE can be used to raise/lower
     the maximum.  [Dean Gaudet]

  *) "nph-" CGIs were not compatible with HTTP/1.1 or SSL support because
     they were passed a socket that connected directly to the client.
     As such they would have to implement the transport level details
     such as encryption or chunking in order to work properly.
     This isn't part of the CGI spec so CGIs generally don't do this.
     The most common use of nph- CGIs is when the programmer wants an
     unbuffered connection to the client; regular CGIs have always been
     fully buffered.  Apache now provides an unbuffered connection to
     all CGIs.  Given that most CGIs are written in a language that by
     default does buffering (i.e. perl) this shouldn't have a detrimental
     effect on performance.  The programmer can still use nph- CGIs,
     and they're still responsible for sending valid HTTP/1.1 responses.
     [Dean Gaudet, Sameer Parekh, Roy Fielding]

  *) If a BUFF is switched from buffered to unbuffered reading the first
     bread() will return whatever remained in the buffer prior to the
     switch. [Dean Gaudet]

Changes with Apache 1.3a1

  *) Added another Configure helper script: TestLib. It determines
     if a specified library exists.

  *) PORT: Allow for use of n32bit libraries under IRIX 6.x
     [derived from patch from Jeff Hayes <jhayes@aw.sgi.com>]
     (PR#721)

  *) PORT: Some architectures use size_t for various lengths in network
     functions such as accept(), and getsockname().  The definition